--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
+<!DOCTYPE html>
+<html>
+<body>
 <h1><strong>TokenDevApp Test Links</strong></h1>
-
-<a href="TokenDevApp://main">main</a></br>
-<a href="TokenDevApp://tokens">tokens</a></br>
-<a href="TokenDevApp://token/TK-UII3D">token/TK-UII3D</a></br>
-<a href="TokenDevApp://activities">activities</a></br>
-<a href="TokenDevApp://activity/TK-ZB63N">activity/TK-ZB63N</a></br>
-<a href="TokenDevApp://profile">profile</a></br>
-<a href="TokenDevApp://createAccount">createAccount</a></br>
-<a href="TokenDevApp://inviteFriends">inviteFriends</a></br>
-<a href="TokenDevApp://loginandsecurity">loginandsecurity</a></br>
-<a href="TokenDevApp://changePassword">changePassword</a></br>
-<a href="TokenDevApp://tokenweb">tokenweb</a></br>
+<p>My website on GitHub Pages. It works!</p>
+  <a href="TokenDevApp://main">main</a></br>
+  <a href="TokenDevApp://tokens">tokens</a></br>
+  <a href="TokenDevApp://token/TK-UII3D">token/TK-UII3D</a></br>
+  <a href="TokenDevApp://activities">activities</a></br>
+  <a href="TokenDevApp://activity/TK-ZB63N">activity/TK-ZB63N</a></br>
+  <a href="TokenDevApp://profile">profile</a></br>
+  <a href="TokenDevApp://createAccount">createAccount</a></br>
+  <a href="TokenDevApp://inviteFriends">inviteFriends</a></br>
+  <a href="TokenDevApp://loginandsecurity">loginandsecurity</a></br>
+  <a href="TokenDevApp://changePassword">changePassword</a></br>
+  <a href="TokenDevApp://tokenweb">tokenweb</a></br>
+</body>
+</html>
