--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <a href="TokenDevApp://main">main</a></br>
   <a href="TokenDevApp://tokens">tokens</a></br>
   <a href="TokenDevApp://token/TK-UII3D">token/TK-UII3D</a></br>
+  <a href="TokenDevApp://token/TK-RU04D">token/TK-RU04D</a></br>
   <a href="TokenDevApp://activities">activities</a></br>
   <a href="TokenDevApp://activity/TK-ZB63N">activity/TK-ZB63N</a></br>
   <a href="TokenDevApp://profile">profile</a></br>
