--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <a href="TokenDevApp://token/TK-RU04D">token/TK-RU04D</a></br>
   <a href="TokenDevApp://activities">activities</a></br>
   <a href="TokenDevApp://activity/TK-ZB63N">activity/TK-ZB63N</a></br>
+  <a href="TokenDevApp://activity/TK-YFC3N">activity/TK-YFC3N</a></br>
   <a href="TokenDevApp://profile">profile</a></br>
   <a href="TokenDevApp://createAccount">createAccount</a></br>
   <a href="TokenDevApp://inviteFriends">inviteFriends</a></br>
