--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   <a href="TokenDevApp://loginandsecurity">loginandsecurity</a></br>
   <a href="TokenDevApp://changePassword">changePassword</a></br>
   <a href="TokenDevApp://tokenweb">tokenweb</a></br>
-  <a href="TokenDevApp://registerInvite/AAAA">registerInvite/AAAA</a></br>
+  <a href="TokenDevApp://registerInvite/AAA1">registerInvite/AAA1</a></br>
 </body>
 </html>
