--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
 <h1><strong>TokenDevApp Test Links</strong></h1>
 <p>My website on GitHub Pages. It works!</p>
+  <h2>Version 1</h2p>
   <a href="TokenDevApp://main">main</a></br>
   <a href="TokenDevApp://tokens">tokens</a></br>
   <a href="TokenDevApp://token/TK-UII3D">token/TK-UII3D</a></br>
@@ -17,5 +18,21 @@
   <a href="TokenDevApp://changePassword">changePassword</a></br>
   <a href="TokenDevApp://tokenweb">tokenweb</a></br>
   <a href="TokenDevApp://registerInvite/AAA1">registerInvite/AAA1</a></br>
+
+  <h2>Version 2</h2p>
+  <a href="TokenDevApp://main">main</a></br>
+  <a href="TokenDevApp://tokens">tokens</a></br>
+  <a href="TokenDevApp://token?id=TK-UII3D">token?id=TK-UII3D</a></br>
+  <a href="TokenDevApp://token?id=TK-RU04D">token?id=TK-RU04D</a></br>
+  <a href="TokenDevApp://activities">activities</a></br>
+  <a href="TokenDevApp://activity?id=TK-ZB63N">activity?id=TK-ZB63N</a></br>
+  <a href="TokenDevApp://activity?id=TK-YFC3N">activity?id=TK-YFC3N</a></br>
+  <a href="TokenDevApp://profile">profile</a></br>
+  <a href="TokenDevApp://createAccount">createAccount</a></br>
+  <a href="TokenDevApp://inviteFriends">inviteFriends</a></br>
+  <a href="TokenDevApp://loginandsecurity">loginandsecurity</a></br>
+  <a href="TokenDevApp://changePassword">changePassword</a></br>
+  <a href="TokenDevApp://tokenweb">tokenweb</a></br>
+  <a href="TokenDevApp://registerInvite?code=AAA1">registerInvite?code=AAA1</a></br>
 </body>
 </html>
