--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <body>
 <h1><strong>TokenDevApp Test Links</strong></h1>
 <p>My website on GitHub Pages. It works!</p>
-  <h2>Version 1</h2p>
+  <h3>Version 1</h3>
+  <p>
   <a href="TokenDevApp://main">main</a></br>
   <a href="TokenDevApp://tokens">tokens</a></br>
   <a href="TokenDevApp://token/TK-UII3D">token/TK-UII3D</a></br>
@@ -18,8 +19,10 @@
   <a href="TokenDevApp://changePassword">changePassword</a></br>
   <a href="TokenDevApp://tokenweb">tokenweb</a></br>
   <a href="TokenDevApp://registerInvite/AAA1">registerInvite/AAA1</a></br>
-
-  <h2>Version 2</h2p>
+  </p>
+  
+  <h3>Version 2</h3>
+  <p>
   <a href="TokenDevApp://main">main</a></br>
   <a href="TokenDevApp://tokens">tokens</a></br>
   <a href="TokenDevApp://token?id=TK-UII3D">token?id=TK-UII3D</a></br>
@@ -34,5 +37,6 @@
   <a href="TokenDevApp://changePassword">changePassword</a></br>
   <a href="TokenDevApp://tokenweb">tokenweb</a></br>
   <a href="TokenDevApp://registerInvite?code=AAA1">registerInvite?code=AAA1</a></br>
+  </p>
 </body>
 </html>
