--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <body>
 <h1><strong>TokenDevApp Test Links</strong></h1>
-<p>My website on GitHub Pages. It works!</p>
   <h3>Version 1</h3>
   <p>
   <a href="TokenDevApp://main">main</a></br>
@@ -21,22 +20,24 @@
   <a href="TokenDevApp://registerInvite/AAA1">registerInvite/AAA1</a></br>
   </p>
   
-  <h3>Version 2</h3>
+<h1><strong>TokenApp Test Links</strong></h1>
+  <h3>Version 1</h3>
   <p>
-  <a href="TokenDevApp://main">main</a></br>
-  <a href="TokenDevApp://tokens">tokens</a></br>
-  <a href="TokenDevApp://token?id=TK-UII3D">token?id=TK-UII3D</a></br>
-  <a href="TokenDevApp://token?id=TK-RU04D">token?id=TK-RU04D</a></br>
-  <a href="TokenDevApp://activities">activities</a></br>
-  <a href="TokenDevApp://activity?id=TK-ZB63N">activity?id=TK-ZB63N</a></br>
-  <a href="TokenDevApp://activity?id=TK-YFC3N">activity?id=TK-YFC3N</a></br>
-  <a href="TokenDevApp://profile">profile</a></br>
-  <a href="TokenDevApp://createAccount">createAccount</a></br>
-  <a href="TokenDevApp://inviteFriends">inviteFriends</a></br>
-  <a href="TokenDevApp://loginandsecurity">loginandsecurity</a></br>
-  <a href="TokenDevApp://changePassword">changePassword</a></br>
-  <a href="TokenDevApp://tokenweb">tokenweb</a></br>
-  <a href="TokenDevApp://registerInvite?code=AAA1">registerInvite?code=AAA1</a></br>
+  <a href="TokenApp://main">main</a></br>
+  <a href="TokenApp://tokens">tokens</a></br>
+  <a href="TokenApp://token/TK-UII3D">token/TK-UII3D</a></br>
+  <a href="TokenApp://token/TK-RU04D">token/TK-RU04D</a></br>
+  <a href="TokenApp://activities">activities</a></br>
+  <a href="TokenApp://activity/TK-ZB63N">activity/TK-ZB63N</a></br>
+  <a href="TokenApp://activity/TK-YFC3N">activity/TK-YFC3N</a></br>
+  <a href="TokenApp://profile">profile</a></br>
+  <a href="TokenApp://createAccount">createAccount</a></br>
+  <a href="TokenApp://inviteFriends">inviteFriends</a></br>
+  <a href="TokenApp://loginandsecurity">loginandsecurity</a></br>
+  <a href="TokenApp://changePassword">changePassword</a></br>
+  <a href="TokenApp://tokenweb">tokenweb</a></br>
+  <a href="TokenApp://registerInvite/AAA1">registerInvite/AAA1</a></br>
   </p>
+ 
 </body>
 </html>
