--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1><strong>TokenDevApp Test Links</strong></h1>
-  <h3>Version 1</h3>
+<h1><strong>Test Deep Links</strong></h2>
+<h2><strong>TokenDevApp Scheme</strong></h2>
   <p>
   <a href="TokenDevApp://main">main</a></br>
   <a href="TokenDevApp://tokens">tokens</a></br>
@@ -20,8 +20,7 @@
   <a href="TokenDevApp://registerInvite/AAA1">registerInvite/AAA1</a></br>
   </p>
   
-<h1><strong>TokenApp Test Links</strong></h1>
-  <h3>Version 1</h3>
+<h2><strong>TokenApp Scheme</strong></h2>
   <p>
   <a href="TokenApp://main">main</a></br>
   <a href="TokenApp://tokens">tokens</a></br>
