--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1><strong>Test Deep Links</strong></h1>
 <h2><strong>TokenDevApp Scheme</strong></h2>
   <p>
-  <a href="TokenDevApp://main">main</a></br>
+  <a href="https://jointoken.com/deep?TokenDevApp://main">main</a></br>
   <a href="TokenDevApp://tokens">tokens</a></br>
   <a href="TokenDevApp://token/TK-UII3D">token/TK-UII3D</a></br>
   <a href="TokenDevApp://token/TK-RU04D">token/TK-RU04D</a></br>
