--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <a href="TokenDevApp://changePassword">changePassword</a></br>
   <a href="TokenDevApp://tokenweb">tokenweb</a></br>
   <a href="TokenDevApp://registerInvite/AAA1">registerInvite/AAA1</a></br>
+  <a href="TokenDevApp://validatePaymentMethod/AAA1">validatePaymentMethod/AAA1</a></br>
   </p>
   
 <h2><strong>TokenApp Scheme</strong></h2>
@@ -36,6 +37,7 @@
   <a href="TokenApp://changePassword">changePassword</a></br>
   <a href="TokenApp://tokenweb">tokenweb</a></br>
   <a href="TokenApp://registerInvite/AAA1">registerInvite/AAA1</a></br>
+  <a href="TokenApp://validatePaymentMethod/AAA1">validatePaymentMethod/AAA1</a></br>
   </p>
  
 </body>
