--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <a href="TokenDevApp://changePassword">changePassword</a></br>
   <a href="TokenDevApp://tokenweb">tokenweb</a></br>
   <a href="TokenDevApp://registerInvite/AAA1">registerInvite/AAA1</a></br>
-  <a href="TokenDevApp://validatePaymentMethod/AAA1">validatePaymentMethod/AAA1</a></br>
+  <a href="TokenDevApp://validatePaymentMethod/TK-TA2X2">iOS validatePaymentMethod/TK-TA2X2</a></br>
   </p>
   
 <h2><strong>TokenApp Scheme</strong></h2>
@@ -37,7 +37,7 @@
   <a href="TokenApp://changePassword">changePassword</a></br>
   <a href="TokenApp://tokenweb">tokenweb</a></br>
   <a href="TokenApp://registerInvite/AAA1">registerInvite/AAA1</a></br>
-  <a href="TokenApp://validatePaymentMethod/AAA1">validatePaymentMethod/AAA1</a></br>
+  <a href="TokenApp://validatePaymentMethod/TK-TA2X2">iOS validatePaymentMethod/TK-TA2X2</a></br>
   </p>
  
 </body>
