--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <a href="TokenDevApp://tokenweb">tokenweb</a></br>
   <a href="TokenDevApp://registerInvite/AAA1">registerInvite/AAA1</a></br>
   <a href="TokenDevApp://validatePaymentMethod/TK-KLD31">iOS validatePaymentMethod/TK-KLD31</a></br>
+  <a href="TokenDevApp://validatePaymentMethod/TK-KLD31">iOS validatePaymentMethod/NK-KLD31</a></br>
   </p>
   
 <h2><strong>TokenApp Scheme</strong></h2>
