--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <a href="TokenDevApp://tokenweb">tokenweb</a></br>
   <a href="TokenDevApp://registerInvite/AAA1">registerInvite/AAA1</a></br>
   <a href="TokenDevApp://validatePaymentMethod/TK-KLD31">iOS validatePaymentMethod/TK-KLD31</a></br>
-  <a href="TokenDevApp://validatePaymentMethod/TK-6RAJ3?secret=112dec9746bdb78c846a189e8261e53927069e58&number=1041&network=visa">iOS validatePaymentMethod/TK-6RAJ3</a></br>
+  <a href="tokendevapp://validatePaymentMethod/TK-NSQY3?secret=8b3f48d5cd2dc641c77c4916196b8a4b0e24795a&number=7731&network=visa">iOS validatePaymentMethod/TK-NSQY3</a></br>
   </p>
   
 <h2><strong>TokenApp Scheme</strong></h2>
