--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <a href="TokenApp://changePassword">changePassword</a></br>
   <a href="TokenApp://tokenweb">tokenweb</a></br>
   <a href="TokenApp://registerInvite/AAA1">registerInvite/AAA1</a></br>
-  <a href="TokenApp://validatePaymentMethod/TK-TA2X2">iOS validatePaymentMethod/TK-TA2X2</a></br>
+  <a href="TokenApp://validatePaymentMethod/TK-WQF94?secret=d8816cea42d49de7e635476556e359b9700b07a6&number=2703&network=visa">iOS validatePaymentMethod/TK-NSQY3</a></br>
   </p>
  
 </body>
