--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <a href="TokenDevApp://tokenweb">tokenweb</a></br>
   <a href="TokenDevApp://registerInvite/AAA1">registerInvite/AAA1</a></br>
   <a href="TokenDevApp://validatePaymentMethod/TK-KLD31">iOS validatePaymentMethod/TK-KLD31</a></br>
-  <a href="TokenApp://validatePaymentMethod/TK-WQF94?secret=d8816cea42d49de7e635476556e359b9700b07a6&number=2703&network=visa">iOS validatePaymentMethod/TK-NSQY3</a></br>
+  <a href="TokenDevApp://validatePaymentMethod/TK-WQF94?secret=d8816cea42d49de7e635476556e359b9700b07a6&number=2703&network=visa">iOS validatePaymentMethod/TK-NSQY3</a></br>
   </p>
   
 <h2><strong>TokenApp Scheme</strong></h2>
