--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <a href="TokenDevApp://tokenweb">tokenweb</a></br>
   <a href="TokenDevApp://registerInvite/AAA1">registerInvite/AAA1</a></br>
   <a href="TokenDevApp://validatePaymentMethod/TK-5BN1D?secret=a501858d5d7ff8454b21aea06075441a7556fd83&number=4716&network=visa">iOS validatePaymentMethod/TK-5BN1D</a></br>
-  <a href="TokenDevApp://validatePaymentMethod/TK-EB40D?secret=5d5bc416f8afc151d8b655f84e9e43f44b781a0c&number=0681&network=visa">iOS validatePaymentMethod/TK-NSQY3</a></br>
+  <a href="tokendevapp://validatePaymentMethod/TK-X603D?secret=962d2c01522980bee46611a9490f2ad0cc12e57d&number=2703&network=visa">iOS validatePaymentMethod/TK-NSQY3</a></br>
   </p>
   
 <h2><strong>TokenApp Scheme</strong></h2>
