--- a/index.html
+++ b/index.html
@@ -1,3 +1,26 @@
+<!--
+    .main                   = @"main",
+    .tokens                 = @"tokens",
+    .token                  = @"token",
+    .activities             = @"activities",
+    .activity               = @"activity",
+    .profile                = @"profile",
+    .paymentMethodAdd       = @"paymentMethodAdd",
+    .inviteFriends          = @"inviteFriends",
+    .loginAndSecurity       = @"loginAndSecurity",
+    .changePassword         = @"changePassword",
+    .tokenWeb               = @"tokenWeb",
+    .registerInvite         = @"registerInvite",
+    .validatePaymentMethod  = @"validatePaymentMethod",
+    .supportTicket          = @"supportTicket",
+    .paymentMethods         = @"paymentMethods",
+    .login                  = @"login",
+    .supportTicketList      = @"supportTickets",
+    .supportTicketNew       = @"supportTicketNew"
+    .back                   = @"back"
+
+
+-->
 <!DOCTYPE html>
 <html>
 <body>
