--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     .paymentMethods         = @"paymentMethods",
     .login                  = @"login",
     .supportTicketList      = @"supportTickets",
-    .supportTicketNew       = @"supportTicketNew"
-    .back                   = @"back"
+    .supportTicketNew       = @"supportTicketNew",
+    .back                   = @"back",
+    .paymentCardAdd         = @"paymentCardAdd",
 
 
 -->
@@ -43,6 +44,7 @@
   <a href="TokenDevApp://registerInvite/AAA1">registerInvite/AAA1</a></br>
   <a href="TokenDevApp://validatePaymentMethod/TK-5BN1D?secret=a501858d5d7ff8454b21aea06075441a7556fd83&number=4716&network=visa">iOS validatePaymentMethod/TK-5BN1D</a></br>
   <a href="tokendevapp://validatePaymentMethod/TK-P1HAD?number=2703&network=visa">iOS validatePaymentMethod/TK-P1HAD</a></br>
+  <a href="TokenDevApp://paymentCardAdd">paymentCardAdd</a></br>
   </p>
   
 <h2><strong>TokenApp Scheme</strong></h2>
@@ -62,6 +64,7 @@
   <a href="TokenApp://tokenweb">tokenweb</a></br>
   <a href="TokenApp://registerInvite/AAA1">registerInvite/AAA1</a></br>
   <a href="TokenApp://validatePaymentMethod/TK-WQF94?secret=d8816cea42d49de7e635476556e359b9700b07a6&number=2703&network=visa">iOS validatePaymentMethod/TK-NSQY3</a></br>
+  <a href="TokenApp://paymentCardAdd">paymentCardAdd</a></br>
   </p>
  
 </body>
